[package]
name = "sc-proxy-dex"
version = "0.0.0"
authors = [ "you",]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"

[features]
wasm-output-mode = [ "elrond-wasm-node",]

[dependencies.elrond-wasm]
version = "0.15"
path = "../../elrond-wasm-rs/elrond-wasm"

[dependencies.elrond-wasm-derive]
version = "0.15"
path = "../../elrond-wasm-rs/elrond-wasm-derive"

[dependencies.elrond-wasm-node]
version = "0.15"
optional = true
path = "../../elrond-wasm-rs/elrond-wasm-node"

[dependencies.distrib-common]
path = "../common/distrib-common"

[dependencies.modules]
path = "../common/modules"

[dependencies.dex-common]
path = "../../sc-dex-rs/common/dex-common"

[dependencies.elrond_dex_pair]
path = "../../sc-dex-rs/elrond_dex_pair"

[dependencies.elrond_dex_farm]
path = "../../sc-dex-rs/elrond_dex_farm"

[dev-dependencies.elrond-wasm-debug]
version = "0.15"
path = "../../elrond-wasm-rs/elrond-wasm-debug"
